2014-12-12  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 3.2.1

	* ypserv/ypserv.8.xml: Enhance securenet documentation
	with new IPv6 and network/netmask features.

2014-12-11  Thorsten Kukuk  <kukuk@thkukuk.de>

	* etc/securenets (host): Fix catch all allow all rule for IPv6.

2014-12-02  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 3.2

	* lib/access.c (is_valid): Free nconf.

2014-12-01  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 3.1

	* revnetgroup/Makefile.am (DEFS): Replace hardcoded /var/yp value.
	* rpc.ypxfrd/ypxfrd.c: Likewise.
	* yppush/yppush.c: Likewise.
	* ypxfr/ypxfr.c: Likewise.

	* ypserv/server.c (ypproc_xfr_2_svc): initialize nconf.
	* ypserv/ypserv.c (main): Don't set RPC_SVC_CONNMAXREC_SET.
	* ypserv/ypserv_xdr.c: Remove unused define XDRMAXRECORD.

2014-11-14  Thorsten Kukuk  <kukuk@thkukuk.de>

	* scripts/Makefile.am (varypdir): Replace hardcoded value with
	configure option.

2014-11-05  Thorsten Kukuk  <kukuk@thkukuk.de>

	* release version 3.0

	* rpc.yppasswdd/yppasswdd.c: Port to TI-RPC.
	* rpc.ypxfrd/ypxfrd.c: Likewise.

2014-11-04  Thorsten Kukuk  <kukuk@thkukuk.de>

	* rpc.yppasswdd/yppasswd_xdr.c: Use header file from libnis.

	* rpc.yppasswdd/update.c: Adjust for TI-RPC.

2014-10-31  Thorsten Kukuk  <kukuk@thkukuk.de>

	* ypxfr/ypxfr_xdr.c: Remove duplicate/unused functions.

	* ypxfr/ypxfr.c: Convert to TI-RPC/IPv6 enablement.
	* yppush/yppush.c: Likewise.
	* ypserv/ypserv.c: Likewise.
	* rpc.ypxfrd/ypxfrd_server.c: Likewise.

2014-10-30  Thorsten Kukuk  <kukuk@thkukuk.de>

	* lib/securenets.c: Implement IPv6 support.

	* ypserv/server.c: Convert to TI-RPC/IPv6 enablement.
	* ypserv/ypserv_xdr.c: Adjust for new yp_prot.h.

	* lib/ypserv_conf.c: Remove compat header include.

	* lib/compat.c: Removed.
	* lib/compat.h: Removed.

2014-03-06  Thorsten Kukuk  <kukuk@suse.de>

	* release version 2.32.1

	* configure.ac: Adjust sd_notify check for systemd >= 209.
